--- a/Authentics/7-login/index.html
+++ b/Authentics/7-login/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -22,6 +22,9 @@
         </header>
 
         <div class="wrapper">
+            <span class="icon-close">
+                <ion-icon name="close-outline"></ion-icon>
+            </span>
             <div class="form-box login">
                 <h2>Login</h2>
                 <form action="#">
@@ -37,11 +40,45 @@
                     </div>
                     <div class="remeber-forgot">
                         <label><input type="checkbox">Remember me</label>
-                        <a href="">Forgot Password?</a>
+                        <a href="#">Forgot Password?</a>
                     </div>
                     <button type="submit" class="btn">Login</button>
                     <div class="login-register">
-                        <p>Don't have an account? <a href="#" class="resgister-link">Register</a></p>
+                        <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+                    </div>
+                </form>
+            </div>
+
+            <div class="form-box register">
+                <h2>Registration</h2>
+                <form action="#">
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="person"></ion-icon>
+                        </span>
+                        <input type="text" required>
+                        <label>Username</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="mail"></ion-icon>
+                        </span>
+                        <input type="email" required>
+                        <label>Email</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="lock-closed"></ion-icon>
+                        </span>
+                        <input type="password" required>
+                        <label>Password</label>
+                    </div>
+                    <div class="remeber-forgot">
+                        <label><input type="checkbox">I agree to the terms & conditions</label>
+                    </div>
+                    <button type="submit" class="btn">Register</button>
+                    <div class="login-register">
+                        <p>Already have an account? <a href="#" class="login-link">Login</a></p>
                     </div>
                 </form>
             </div>
