--- a/Desafios/4/index.html
+++ b/Desafios/4/index.html
@@ -11,10 +11,17 @@
     
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com isso
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="img/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-github.jpg" alt="Github"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 
