--- a/Desafios/4/facebook.html
+++ b/Desafios/4/facebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="img/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR">ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
 </body>
 </html>
