--- a/Desafios/4/twitter.html
+++ b/Desafios/4/twitter.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="img/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/guanabara?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">ACESSE</a>
+    <a href="https://twitter.com/guanabara?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">ACESSE</a>
 </body>
 </html>
