Terminando o projeto OP

--- a/Projeto One-Piece/index.html
+++ b/Projeto One-Piece/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="personagens">
         <div class="personagem" id="Chopper">
-            <img src="img/chopper.jpg" alt="Tony Tony Chopper" class="imagem">
+            <img src="img/chopper.jpg" alt="Tony Tony Chopper" class="imagem" id="imgChopper">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Tony Tony Chopper</h2>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="personagem selecionado" id="Zoro">
-            <img src="img/zoro.jpg" alt="Roronoa Zoro" class="imagem">
+            <img src="img/zoro.jpg" alt="Roronoa Zoro" class="imagem" id="imgZoro">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Roronoa Zoro</h2>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="personagem" id="Nami">
-            <img src="img/personagem-nami.png" alt="Nami" class="imagem">
+            <img src="img/personagem-nami.png" alt="Nami" class="imagem" id="imgNami">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Nami</h2>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="personagem" id="Sanji">
-            <img src="img/sanji.jpg" alt="Vinsmoke Sanji" class="imagem">
+            <img src="img/sanji.jpg" alt="Vinsmoke Sanji" class="imagem" id="imgSanji">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Vinsmoke Sanji</h2>
@@ -56,27 +56,27 @@
     </main>
     <ul class="botoes">
         <li>
-          <button class="botao" id="botao-1">
+          <button class="botao" id="botao-chopper">
             <div class="imgLogo" id="chopper"></div>
           </button>
         </li>
         <li>
-          <button class="botao" id="botao-2">
+          <button class="botao selecionado" id="botao-zoro">
             <div class="imgLogo" id="zoro"></div>
           </button>
         </li>
         <li>
-          <button class="botao" id="botao-3">
+          <button class="botao" id="botao-luffy">
             <div class="imgLogo" id="luffy"></div>
           </button>
         </li>
         <li>
-          <button class="botao" id="botao-4">
+          <button class="botao" id="botao-nami">
             <div class="imgLogo" id="nami"></div>
           </button>
         </li>
         <li>
-          <button class="botao" id="botao-5">
+          <button class="botao" id="botao-sanji">
             <div class="imgLogo" id="sanji"></div>
           </button>
         </li>
